--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^5.1.4",
-    "vite-gleam": "^0.4.3"
-  }
+	"name": "app",
+	"private": true,
+	"version": "0.0.1",
+	"packageManager": "pnpm@9.7.1",
+	"type": "module",
+	"scripts": {
+		"dev": "npm run clear && cross-env NODE_ENV=development GLEAM_ENV=development run-p dev:*",
+		"build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:background build:js",
+		"build:prepare": "gleam run -m scripts/prepare",
+		"build:background": "vite build --config vite.config.background.mjs",
+		"build:web": "vite build",
+		"build:js": "vite build --config vite.config.content.mjs",
+		"clear": "rimraf --glob extension/dist extension/manifest.json extension.*"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3",
+		"fs-extra": "^11.0.4",
+		"npm-run-all": "^4.1.5",
+		"rimraf": "^6.0.1",
+		"toml": "^3.0.0",
+		"vite": "^5.4.2",
+		"vite-gleam": "^0.4.3"
+	}
 }
