--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
 		"clear": "rimraf --glob extension/dist extension/manifest.json extension.*"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.4.20",
 		"cross-env": "^7.0.3",
 		"fs-extra": "^11.0.4",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.49",
 		"rimraf": "^6.0.1",
+		"tailwindcss": "^3.4.15",
 		"toml": "^3.0.0",
 		"vite": "^5.4.2",
 		"vite-gleam": "^0.4.3"
