--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-	"name": "app",
-	"private": true,
-	"version": "0.0.1",
-	"packageManager": "pnpm@9.7.1",
-	"type": "module",
-	"scripts": {
-		"dev": "npm run clear && cross-env NODE_ENV=development GLEAM_ENV=development run-p dev:*",
-		"build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:background build:js",
-		"build:prepare": "gleam run -m scripts/prepare",
-		"build:background": "vite build --config vite.config.background.mjs",
-		"build:web": "vite build",
-		"build:js": "vite build --config vite.config.content.mjs",
-		"clear": "rimraf --glob extension/dist extension/manifest.json extension.*"
-	},
-	"devDependencies": {
-		"autoprefixer": "^10.4.20",
-		"cross-env": "^7.0.3",
-		"fs-extra": "^11.0.4",
-		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.49",
-		"rimraf": "^6.0.1",
-		"tailwindcss": "^3.4.15",
-		"toml": "^3.0.0",
-		"vite": "^5.4.2",
-		"vite-gleam": "^0.4.3"
-	}
+  "name": "app",
+  "private": true,
+  "version": "0.0.1",
+  "packageManager": "pnpm@9.7.1",
+  "type": "module",
+  "scripts": {
+    "dev": "pnpm run clear && cross-env NODE_ENV=development GLEAM_ENV=development run-p dev:*",
+    "dev-firefox": "pnpm run clear && cross-env NODE_ENV=development EXTENSION=firefox run-p dev:*",
+    "dev:prepare": "gleam run -m scripts/prepare",
+    "dev:background": "pnpm run build:background -- --mode development",
+    "dev:web": "vite",
+    "dev:js": "pnpm run build:js -- --mode development",
+    "build": "cross-env NODE_ENV=production GLEAM_ENV=production run-s clear build:web build:prepare build:background build:js",
+    "build:prepare": "gleam run -m scripts/prepare",
+    "build:background": "vite build --config vite.config.background.mjs",
+    "build:web": "vite build",
+    "build:js": "vite build --config vite.config.content.mjs",
+    "clear": "rimraf --glob extension/dist extension/manifest.json extension.*"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
+    "fs-extra": "^11.0.4",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.49",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.15",
+    "toml": "^3.0.0",
+    "vite": "^5.4.2",
+    "vite-gleam": "^0.4.3"
+  }
 }
