--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwindcss": "^3.4.15",
     "toml": "^3.0.0",
     "vite": "^5.4.2",
-    "vite-gleam": "^0.4.3"
+    "vite-gleam": "^0.4.3",
+    "vite-plugin-static-copy": "^2.2.0"
   }
 }
