--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "app",
+  "name": "lustre_web_extension",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "packageManager": "pnpm@9.7.1",
   "type": "module",
   "scripts": {
