--- a/gleam.toml
+++ b/gleam.toml
@@ -21,6 +21,9 @@ gleam_json = ">= 2.0.0 and < 3.0.0"
 tom = ">= 1.1.0 and < 2.0.0"
 simplifile = ">= 2.2.0 and < 3.0.0"
 dot_env = ">= 1.2.0 and < 2.0.0"
+gleam_otp = ">= 0.16.0 and < 1.0.0"
+gleam_javascript = ">= 0.13.0 and < 1.0.0"
+ref = ">= 0.3.3 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
