--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "toml": "^3.0.0",
     "vite": "^5.4.2",
     "vite-gleam": "^0.4.3",
-    "vite-plugin-static-copy": "^2.2.0"
+    "vite-plugin-static-copy": "^2.2.0",
+    "webextension-polyfill": "^0.12.0"
   }
 }
