--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-	"name": "lustre_browser_extension",
-	"private": true,
-	"version": "1.0.0",
-	"packageManager": "pnpm@9.7.1",
-	"type": "module",
-	"scripts": {
-		"dev": "pnpm run clear && cross-env NODE_ENV=development GLEAM_ENV=development run-p dev:*",
-		"dev-firefox": "pnpm run clear && cross-env NODE_ENV=development GLEAM_ENV=development EXTENSION=firefox run-p dev:*",
-		"dev:prepare": "gleam run -m scripts/prepare",
-		"dev:background": "pnpm run build:background -- --mode development",
-		"dev:web": "vite",
-		"dev:js": "pnpm run build:js -- --mode development",
-		"build": "cross-env NODE_ENV=production GLEAM_ENV=production run-s clear build:web build:prepare build:background build:js",
-		"build:prepare": "gleam run -m scripts/prepare",
-		"build:background": "vite build --config vite.config.background.mjs",
-		"build:web": "vite build",
-		"build:js": "vite build --config vite.config.content.mjs",
-		"clear": "rimraf --glob extension/dist extension/manifest.json extension.*",
-		"pack": "cross-env NODE_ENV=production run-p pack:*",
-		"pack:zip": "rimraf extension.zip && jszip-cli add extension/* -o ./extension.zip",
-		"pack:crx": "crx pack extension -o ./extension.crx",
-		"pack:xpi": "cross-env WEB_EXT_ARTIFACTS_DIR=./ web-ext build --source-dir ./extension --filename extension.xpi --overwrite-dest",
-		"start:chromium": "web-ext run --source-dir ./extension --target=chromium",
-		"start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop"
-	},
-	"devDependencies": {
-		"autoprefixer": "^10.4.20",
-		"cross-env": "^7.0.3",
-		"crx": "^5.0.1",
-		"fs-extra": "^11.0.4",
-		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.49",
-		"rimraf": "^6.0.1",
-		"tailwindcss": "^3.4.15",
-		"toml": "^3.0.0",
-		"vite": "^5.4.2",
-		"vite-gleam": "^0.4.3",
-		"vite-plugin-static-copy": "^2.2.0",
-		"web-ext": "^8.3.0",
-		"webextension-polyfill": "^0.12.0"
-	}
+  "name": "lustre_browser_extension",
+  "private": true,
+  "version": "1.0.0",
+  "packageManager": "pnpm@9.7.1",
+  "type": "module",
+  "scripts": {
+    "dev": "pnpm run clear && cross-env NODE_ENV=development GLEAM_ENV=development run-p dev:*",
+    "dev-firefox": "pnpm run clear && cross-env NODE_ENV=development GLEAM_ENV=development EXTENSION=firefox run-p dev:*",
+    "dev:prepare": "gleam run -m scripts/prepare",
+    "dev:background": "pnpm run build:background -- --mode development",
+    "dev:web": "vite",
+    "dev:js": "pnpm run build:js -- --mode development",
+    "build": "cross-env NODE_ENV=production GLEAM_ENV=production run-s clear build:web build:prepare build:background build:js",
+    "build-firefox": "cross-env NODE_ENV=production GLEAM_ENV=production EXTENSION=firefox run-s clear build:web build:prepare build:background build:js",
+    "build:prepare": "gleam run -m scripts/prepare",
+    "build:background": "vite build --config vite.config.background.mjs",
+    "build:web": "vite build",
+    "build:js": "vite build --config vite.config.content.mjs",
+    "clear": "rimraf --glob extension/dist extension/manifest.json extension.*",
+    "pack": "cross-env NODE_ENV=production run-p pack:*",
+    "pack:zip": "rimraf extension.zip && jszip-cli add extension/* -o ./extension.zip",
+    "pack:crx": "crx pack extension -o ./extension.crx",
+    "pack:xpi": "cross-env WEB_EXT_ARTIFACTS_DIR=./ web-ext build --source-dir ./extension --filename extension.xpi --overwrite-dest",
+    "start:chromium": "web-ext run --source-dir ./extension --target=chromium",
+    "start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
+    "crx": "^5.0.1",
+    "fs-extra": "^11.0.4",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.49",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.15",
+    "toml": "^3.0.0",
+    "vite": "^5.4.2",
+    "vite-gleam": "^0.4.3",
+    "vite-plugin-static-copy": "^2.2.0",
+    "web-ext": "^8.3.0",
+    "webextension-polyfill": "^0.12.0"
+  }
 }
