--- a/gleam.toml
+++ b/gleam.toml
@@ -1,4 +1,4 @@
-name = "lustre_browser_extension"
+name = "ebookit"
 version = "1.0.0"
 target = "javascript"
 
@@ -28,16 +28,7 @@ ref = ">= 0.3.3 and < 1.0.0"
 [dev-dependencies]
 gleeunit = "~> 1.0"
 lustre_dev_tools = ">= 1.2.1 and < 2.0.0"
-glailglind = ">= 1.1.2 and < 2.0.0"
 lucide_lustre = ">= 2.0.0 and < 3.0.0"
-
-[tailwind]
-version = "3.4.1" # optional
-args = [
-    "--config=tailwind.config.js",
-    "--input=./src/styles/app.css",
-    "--output=./extension/priv/styles/app.css"
-]
 
 [lucide_lustre]
 output_module = "components/lucide_icons"
